--- a/index.html
+++ b/index.html
@@ -161,12 +161,31 @@
 
     </div>
 
-    <!-- Contact section, use trianglify, email  -->
+    <!-- Contact section -->
     <div class="section contact">
+      <div class="contact-text">
+        <h3>Contact_</h3>
+         If you have project that you would like for me to be involved in or just want to say hi, please feel free to reach me at
+        <a href="mailTo:razaikb@gmail.com">razaikb@gmail.com</a><br>
+        <p>I am available for freelancing.</p><br>
+
+
+          <a href="http://www.github.com/Razaik25" target="_blank">
+            <img id="github" src="images/github.png" alt="">
+          </a>
+          <a href="https://www.linkedin.com/in/razaikboparai" target="_blank">
+            <img id="linkedin" src="images/linkedin.svg" alt="">
+          </a>
+          <br>
+          <br>
+          This webiste was made with <span class="heart">❤︎</span> using Bower,jQuery,Fullpage,Lightbox,Particles.js,<br>Trainglify,Chrome and Atom
+          <p class="lastmodified"></p>
+      </div>
+
+<!-- <i class="material-icons email">contact_mail</i> -->
 
 
 
-    </div>
 
 
 
@@ -179,6 +198,7 @@
   <script src="bower_components/fullpage.js/jquery.fullPage.js"></script>
   <script src="bower_components/particles.js/particles.min.js"></script>
   <script src="bower_components/lightbox2/src/js/lightbox.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/trianglify/0.4.0/trianglify.min.js"></script>
   <script src="app.js"></script>
 </body>
 </html>
