--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="bower_components/lightbox2/src/css/lightbox.css" rel="stylesheet">
 
+    <link href="images/favicon.ico" rel="icon" type="image/x-icon" />
     <link href="assests/animate.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="bower_components/fullpage.js/jquery.fullPage.css">
     <link rel="stylesheet" href="style.css">
@@ -178,7 +179,7 @@
           </a>
           <br>
           <br>
-          This webiste was made with <span class="heart">❤︎</span> using Bower,jQuery,Fullpage,Lightbox,Particles.js,<br>Trainglify,Chrome and Atom
+          Made with <span class="heart">❤︎</span> using Bower,jQuery,Fullpage,Lightbox,Particles.js,<br>Trainglify,Chrome and Atom
           <p class="lastmodified"></p>
       </div>
 
