updated about and contact section

--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
       <div class="text">
         <h3>Hello_</h3>
         <h4>
-          I am an electrical engineer, now a full stack web developer who occasionally likes to watch movies and TV shows.
+          I am an electrical engineer with Math minor and a full stack web developer with background in React, React Native, JavaScript, Ruby, Ruby-on-Rails, C#, Python, HTML5/CSS3, jQuery, Relational databases, Git (Version Control), AJAX, Node.js, and Express.js.
+          I occasionally like to watch movies and TV shows.
           I am a mess without a cup of coffee.
           I love everything about coding.
           I aspire to learn, grow and contribute.
@@ -166,13 +167,14 @@
     <div class="section contact">
       <div class="contact-text">
         <h3>Contact_</h3>
+         I have international work experience from having worked in Canada and India.
          If you have project that you would like for me to be involved in or just want to say hi, please feel free to reach me at
         <a href="mailTo:razaikb@gmail.com">razaikb@gmail.com</a><br>
         <p>I am available for freelancing.</p><br>
           <a href="http://www.github.com/Razaik25" target="_blank">
             <img id="github" src="images/github.png" alt="">
           </a>
-          
+
           <a href="https://www.linkedin.com/in/razaikboparai" target="_blank">
             <img id="linkedin" src="images/linkedin.svg" alt="">
           </a>
