--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     <!-- Home Section -->
     <div class="section home">
       <h1 class="name animated fadeInDown">RAZAIK<span>BOPARAI</span></h1>
-      <p class="bio animated fadeInUp delay-05s"><em>Web Developer</em> | <em>Electrical Engineer</em></p>
-      <p class="arrow"></p>
+      <p class="bio animated fadeInUp delay-05s"><em>Full Stack Web Developer</em> | <em>Electrical Engineer</em></p>
+      <p class="arrow animated fadeIn delay-09s "></p>
 
     </div>
 
