--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <link href='http://fonts.googleapis.com/css?family=Varela' rel='stylesheet' type='text/css'>
     <link href="https://fonts.googleapis.com/css?family=Cardo|Oswald|Unica+One|Josefin+Sans|Exo" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link href="bower_components/lightbox2/src/css/lightbox.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="bower_components/lightbox2/src/css/lightbox.css" >
 
     <link href="images/favicon.ico" rel="icon" type="image/x-icon" />
     <link href="assests/animate.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="bower_components/fullpage.js/jquery.fullPage.css">
+    <link rel="stylesheet"  href="bower_components/fullpage.js/jquery.fullPage.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
