--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
     <link rel="stylesheet" type="text/css" href="bower_components/lightbox2/src/css/lightbox.css" >
-    <link rel="stylesheet" type="text/css" href="assests/animate.css" >
     <link rel="stylesheet" type="text/css" href="bower_components/fullpage.js/jquery.fullPage.css">
     <link rel="stylesheet" type="text/css" href="assests/simpletextrotator.css">
     <link rel="stylesheet" type="text/css" href="style.css">
@@ -27,9 +26,9 @@
 
     <!-- Home Section -->
     <div class="section home">
-      <h1 class="name animated fadeInDown">RAZAIK<span>BOPARAI</span></h1>
-      <p class="bio animated fadeInUp delay-05s"><em>Web Developer</em> | <em>Electrical Engineer</em></p>
-      <i class="material-icons animated fadeInUp delay-09s" id="arrow">arrow_drop_down</i>
+      <h1 class="name ">RAZAIK<span>BOPARAI</span></h1>
+      <p class="bio"><em>Web Developer</em> | <em>Electrical Engineer</em></p>
+      <i class="material-icons" id="arrow">arrow_drop_down</i>
       <!-- <p class="arrow animated fadeIn delay-09s "></p> -->
 
     </div>
@@ -40,7 +39,7 @@
       <div class="text">
         <h3>Hello_</h3>
         <h4>
-          I am a full stack web developer who majored in electrical engineering and recevied a minor in math.<br> <br> Skills:<span class="rotate" id="skills">  Javascript, Ruby, Python , C#|  React, React-Native, Ruby-on-Rails, jQuery |AJAX, Node.js,Express.js, Relational Databases</span><br><br>
+          I am a full stack web developer who majored in electrical engineering and recevied a minor in math.<br> <br> Skills: <span class="rotate" id="skills">  Javascript, Ruby, Python , C#|  React, React-Native, Ruby-on-Rails, jQuery |AJAX, Node.js,Express.js, Relational Databases</span><br><br>
           I have international experience having worked in Canada and India. I look forward to being involved in various projects where i can utilize my experience and background.<br><br>
           Professional capacity aside, I am always looking for the next best movie recommendation, I cannot function in the mornings without a cup of coffee and I love anything and everything that involves coding.
           I aspire to learn, grow and contribute.
@@ -52,7 +51,7 @@
     <!-- Portfolio section  -->
     <div class="section portfolio">
 
-      <div class="slide animated fadeInDown" id="slide1">
+      <div class="slide" id="slide1">
        <h3>Work_</h3>
        <h3>ShopMate<a href="http://shopmate.herokuapp.com/" target="_blank" id="btn"><i class="material-icons">open_in_new</i> Visit Website </a></h3>
        <a href="images/shopmate/1.png" data-lightbox="1.png">
