--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <div class="text">
         <h3>Hello_</h3>
         <h4>
-          I am a full stack web developer who majored in electrical engineering and recevied a minor in math.<br> <br> Skills: <span class="rotate" id="rotate">  Javascript, Ruby, Python , C#|  React, React-Native, Ruby-on-Rails, jQuery |AJAX, Node.js,Express.js, Relational Databases</span><br><br>
+          I am a full stack web developer who majored in electrical engineering and recevied a minor in math.<br> <br> Skills: <span class="rotate" id="rotate-text">  Javascript, Ruby, Python , C#|  React, React-Native, Ruby-on-Rails, jQuery |AJAX, Node/Express, Relational Databases</span><br><br>
           I have international experience having worked in Canada and India. I look forward to being involved in various projects where i can utilize my experience and background.<br><br>
           Professional capacity aside, I am always looking for the next best movie recommendation, I cannot function in the mornings without a cup of coffee and I love anything and everything that involves coding.
           I aspire to learn, grow and contribute.
