--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@
        <a href="images/shopmate/4.png" data-lightbox="1.png">
         <img src="images/shopmate/4.png">
        </a>
-       <h4 class="project-info">
+       <p class="project-info">
         <span class="rainbow">ShopMate</span> is a Full Stack CRUD application designed maintian shopping lists.
           It lets users view, edit and add shopping lists according to their personal need.
         <span class="rainbow">Technologies:</span> Node.js, Express.js, JavaScript, HTML5/CSS5, PostgresSQL, RESTful Routes
-       </h4>
+      </p>
       </div>
 
       <div class="slide" id="slide2">
@@ -89,11 +89,11 @@
           <img src="images/quizzer/4.jpeg">
         </a>
 
-         <h4 class="project-info">
+         <p class="project-info">
           <span class="rainbow">Quizzer</span> is score based quiz trivia game for iOS devices.
           Users can choose from different categories such as celebrities, coding, general knowledge, trivia, maths.
           <span class="rainbow">Technologies:</span> React-Native, JavaScript, Firebase, Node.js, PostgresSQL, Express.js
-         </h4>
+        </p>
 
       </div>
 
@@ -113,11 +113,11 @@
           <img src="images/citydipity/4.png">
         </a>
 
-         <h4 class="project-info">
+         <p class="project-info">
           <span class="rainbow">Citydipity</span> is a dynamic multi player scavenger hunt web application.
           Worked in groups of three to create this geo-location game. I worked on front end with React Js, Google Maps API, JavaScript, HTML5/CSS3 and User tokens.
           <span class="rainbow">Technologies:</span> React, Google Maps API, Node.js, PostgresSQL, Express.js, HTML5/CSS3
-         </h4>
+        </p>
       </div>
 
       <div class="slide" id="slide4">
@@ -133,10 +133,10 @@
           <img src="images/simonsays/3.png">
         </a>
 
-         <h4 class="project-info">
+         <p class="project-info">
           <span class="rainbow">Simon Says</span> is a two player in-browser web memory game based on classic game of Simon Says.<br>
           <span class="rainbow">Technologies:</span> JavaScript, jQuery, HTML5/CSS3
-         </h4>
+        </p>
       </div>
 
       <div class="slide" id="slide5">
@@ -155,10 +155,10 @@
            <img src="images/smartwave/4.png">
         </a>
 
-         <h4 class="project-info">
+         <p class="project-info">
           <span class="rainbow">SmartWave</span> or Smart Wireless Application for Vehicles Energy is a web app to direct a smart meter to activate the primary coil for wireless charging of an electric vehicle.<br>
           <span class="rainbow">Technologies:</span> Dedicated server in University of Windsor, Arduino/Xbee pairs, PHP, RPM sensors, HTML/CSS
-         </h4>
+        </p>
       </div>
 
     </div>
