tweaks for responsive design

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
        </a>
        <p class="project-info">
         <span class="rainbow">ShopMate</span> is a Full Stack CRUD application designed maintian shopping lists.
-          It lets users view, edit and add shopping lists according to their personal need.
+          It lets users view, edit and add shopping lists according to their personal need.<br>
         <span class="rainbow">Technologies:</span> Node.js, Express.js, JavaScript, HTML5/CSS5, PostgresSQL, RESTful Routes
       </p>
       </div>
@@ -91,7 +91,7 @@
 
          <p class="project-info">
           <span class="rainbow">Quizzer</span> is score based quiz trivia game for iOS devices.
-          Users can choose from different categories such as celebrities, coding, general knowledge, trivia, maths.
+          Users can choose from different categories such as celebrities, coding, general knowledge, trivia, maths.<br>
           <span class="rainbow">Technologies:</span> React-Native, JavaScript, Firebase, Node.js, PostgresSQL, Express.js
         </p>
 
@@ -115,7 +115,7 @@
 
          <p class="project-info">
           <span class="rainbow">Citydipity</span> is a dynamic multi player scavenger hunt web application.
-          Worked in groups of three to create this geo-location game. I worked on front end with React Js, Google Maps API, JavaScript, HTML5/CSS3 and User tokens.
+          Worked in groups of three to create this geo-location game. I worked on front end with React Js, Google Maps API, JavaScript, HTML5/CSS3 and User tokens.<br>
           <span class="rainbow">Technologies:</span> React, Google Maps API, Node.js, PostgresSQL, Express.js, HTML5/CSS3
         </p>
       </div>
