fixed canvas position

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     <!-- About Section  using particle.js-->
     <div class="section about">
-
+      <div id ="particles-js"></div>
       <div class="text">
         <h3>Hello_</h3>
         <h4>
@@ -45,7 +45,7 @@
           I aspire to learn, grow and contribute.
         </h4>
       </div>
-      <div id ="particles-js"></div>
+
     </div>
 
     <!-- Portfolio section  -->
@@ -115,7 +115,7 @@
 
          <p class="project-info">
           <span class="rainbow">Citydipity</span> is a dynamic multi player scavenger hunt web application.
-          Worked in groups of three to create this geo-location game. I worked on front end with React Js, Google Maps API, JavaScript, HTML5/CSS3 and User tokens.<br>
+          Worked in groups of three to create this geo-location game. I worked on front end with React Js, Google Maps API, JavaScript, HTML5/CSS3 and User tokens.
           <span class="rainbow">Technologies:</span> React, Google Maps API, Node.js, PostgresSQL, Express.js, HTML5/CSS3
         </p>
       </div>
