--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <img src="images/shopmate/4.png">
        </a>
        <p class="project-info">
-        <span class="rainbow">ShopMate</span> is a Full Stack CRUD application designed maintian shopping lists.
+        <span class="rainbow">ShopMate</span> is a Full Stack CRUD application designed to maintian shopping lists.
           It lets users view, edit and add shopping lists according to their personal need.<br>
         <span class="rainbow">Technologies:</span> Node.js, Express.js, JavaScript, HTML5/CSS5, PostgresSQL, RESTful Routes
       </p>
