updated portfolio section

--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Razaik Boparai Portfolio</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1 maximum-scale=1.0">
+    <!-- <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0" /> -->
+
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="author" content="Razaik Boparai" />
     <meta name="description" content="Razaik Boparai Portfolio" />
@@ -68,7 +70,7 @@
        </a>
        <p class="project-info">
         <span class="rainbow">ShopMate</span> is a Full Stack CRUD application designed to maintian shopping lists.
-          It lets users view, edit and add shopping lists according to their personal need.<br>
+          It lets users view, edit and add shopping lists according to their personal needs.<br>
         <span class="rainbow">Technologies:</span> Node.js, Express.js, JavaScript, HTML5/CSS5, PostgresSQL, RESTful Routes
       </p>
       </div>
@@ -90,8 +92,8 @@
         </a>
 
          <p class="project-info">
-          <span class="rainbow">Quizzer</span> is score based quiz trivia game for iOS devices.
-          Users can choose from different categories such as celebrities, coding, general knowledge, trivia, maths.<br>
+          <span class="rainbow">Quizzer</span> is a quiz trivia game for iOS devices.
+          Users can choose from different categories such as celebrities, coding, general knowledge, trivia, maths and answer the questions correctly to score points.<br>
           <span class="rainbow">Technologies:</span> React-Native, JavaScript, Firebase, Node.js, PostgresSQL, Express.js
         </p>
 
@@ -115,7 +117,7 @@
 
          <p class="project-info">
           <span class="rainbow">Citydipity</span> is a dynamic multi player scavenger hunt web application.
-          Worked in groups of three to create this geo-location game. I worked on front end with React Js, Google Maps API, JavaScript, HTML5/CSS3 and User tokens.
+          Working in a group of three, I handled front end with React Js, Google Maps API, JavaScript, HTML5/CSS3 and User tokens.<br>
           <span class="rainbow">Technologies:</span> React, Google Maps API, Node.js, PostgresSQL, Express.js, HTML5/CSS3
         </p>
       </div>
@@ -134,7 +136,7 @@
         </a>
 
          <p class="project-info">
-          <span class="rainbow">Simon Says</span> is a two player in-browser web memory game based on classic game of Simon Says.<br>
+          <span class="rainbow">Simon Says</span> is a two player in-browser web memory game based on classic game of Simon Says, where players try to match the pattern of lights/sounds for as long as they can.<br>
           <span class="rainbow">Technologies:</span> JavaScript, jQuery, HTML5/CSS3
         </p>
       </div>
