minor updates in style

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <h3>Work_</h3>
         <h3>Quizzer<a href="https://github.com/Razaik25/quizzer" target="_blank" id="btn"><i class="material-icons">open_in_new</i> Visit Website </a></h3>
         <a href="images/quizzer/1.jpeg" data-lightbox="1.png">
-          <img src="images/quizzer/1.jpeg">
+          <img src="images/quizzer/1.jpeg" title="login/signup page">
         </a>
         <a href="images/quizzer/2.jpeg" data-lightbox="1.png">
           <img src="images/quizzer/2.jpeg">
