--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <div class="text">
         <h3>Hello</h3>
         <h4>
-          I am a full stack web developer. I can help you create better experiences for web across different platforms. I have two years+ exprience in the field.
+          I am a full stack web developer. I can help you create better experiences for web across different platforms. I have two years+ experience in the field.
           who majored in electrical engineering and recevied a minor in math.<br> <br> Skills: <span class="rotate" id="rotate-text">  Javascript, Ruby, Python , C#|  React, React-Native, Ruby-on-Rails, jQuery |AJAX, Node/Express, Relational Databases</span><br><br>
           I have international experience having worked in Canada and India. I look forward to being involved in various projects where i can utilize my experience and background.<br><br>
           Professional capacity aside, I am always looking for the next best movie recommendation, I cannot function in the mornings without a cup of coffee and I love anything and everything that involves coding.
@@ -58,15 +58,82 @@
     <div class="section tech-skills">
       <div class="text">
         <h3>< / ><br>Technical Skills</h3>
-        <h4>
-          I am a full stack web developer. I can help you create better experiences for web across different platforms. I have two years+ exprience in the field.
-          who majored in electrical engineering and recevied a minor in math.<br> <br> Skills: <span class="rotate" id="rotate-text">  Javascript, Ruby, Python , C#|  React, React-Native, Ruby-on-Rails, jQuery |AJAX, Node/Express, Relational Databases</span><br><br>
-          I have international experience having worked in Canada and India. I look forward to being involved in various projects where i can utilize my experience and background.<br><br>
-          Professional capacity aside, I am always looking for the next best movie recommendation, I cannot function in the mornings without a cup of coffee and I love anything and everything that involves coding.
-          I aspire to learn, grow and contribute.
-        </h4>
-      </div>
+        <!-- <div class="skills-container"> -->
+          <div class="skills-grid">
 
+            <figure class="effect-roxy">
+              <figcaption>
+                <div>
+                  <h2>Front<span> End</span></h2>
+                  <p>React &amp; Redux</p>
+                  <p>React Native</p>
+                  <p>jQuery &amp;Underscore</p>
+                  <p>HTML5 &amp;CSS3</p>
+                </div>
+              </figcaption>
+            </figure>
+
+            <figure class="effect-roxy" id="back-end">
+              <figcaption>
+                <div>
+                  <h2>Back<span> End</span></h2>
+                  <p>Node.js</p>
+                  <p>Express.js</p>
+                  <p>Bower &amp;npm</p>
+                  <p>Ruby on Rails</p>
+                </div>
+              </figcaption>
+            </figure>
+
+            <figure class="effect-roxy">
+              <figcaption>
+                <div>
+                  <h2>Database</h2>
+                  <p>SQL - Postgres</p>
+                  <p>NoSQL -  Firebase</p>
+                  <p>ActiveRecord</p>
+                </div>
+              </figcaption>
+            </figure>
+
+            <figure class="effect-roxy">
+              <figcaption>
+                <div>
+                  <h2>Languages</h2>
+                  <p>JavaScript</p>
+                  <p>Ruby</p>
+                  <p>Python</p>
+                  <p>C#</p>
+                </div>
+              </figcaption>
+            </figure>
+
+            <figure class="effect-roxy">
+                <figcaption>
+                  <div>
+                    <h2>Deployment</h2>
+                  <p>Heroku</p>
+                  <p>DigitalOcean</p>
+                </div>
+              </figcaption>
+            </figure>
+
+            <figure class="effect-roxy">
+              <figcaption>
+                <div>
+                  <h2>Other</h2>
+                  <p>AJAX</p>
+                  <p>Git</p>
+                  <p>Jasmine</p>
+                  <p>MS Office</p>
+                  <p>Adobe CS</p>
+                </div>
+              </figcaption>
+            </figure>
+
+          </div>
+        </div>
+      <!-- </div> -->
     </div>
 
     <!-- Portfolio section  -->
